[tool.poetry]
name = "s"
version = "0.1.0"
description = "Análise exploratória de dados"
authors = ["Henrique Ferreira Henrique <hhycky@live.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
setuptools = "^77.0.3"
taskipy = "^1.14.1"
ydata-profiling = "^4.15.1"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
